--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,6 @@
     key: "{{item.key}}"
     value: "{{item.value}}"
   with_items:
-    - {key: router/domain, value: "tw.com"}
     - {key: router/nginx/worker_processes, value: 1}
     - {key: router/nginx/user, value: "nginx nginx"}
     - {key: router/nginx/error_log, value: "/var/log/nginx/error.log warn"}
@@ -35,6 +34,7 @@
   command: curl -X PUT -d '{{item.value}}' http://localhost:8500/v1/kv/{{item.key}}
   with_items:
     - {key: "cde/builder/config", value: '{"repo": "/repo", "build_wrapper": "hub.deepi.cn/cde/build-wrapper", "verify_wrapper": "hub.deepi.cn/cde/verify-wrapper"}'}
+    - {key: "cde/platform/domain", value: "tw.com"}
     - {key: "cde/platform/config", value: "{\"registry\": {\"endpoint\": \"hub.deepi.cn\"}, \"marathon\": {\"endpoint\": \"http://192.168.50.5:8080\"}}"}
-    - {key: "cde/controller/endpoint", value: "http://192.168.50.4:31088"}
-    - {key: "cde/deployment/endpoint", value: "http://192.168.50.4:31089"}
+    - {key: "cde/builder/endpoint", value: "http://cde.tw.com/build"}
+    - {key: "cde/deployment/endpoint", value: "http://cde.tw.com/deployment"}
